--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,23 @@
   "description": "api du projet de dev 3 concernant le projet de Mme Cuisinier",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "devStart": "nodemon app.js"
   },
   "author": "groupe V04",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "mysql": "^2.18.1"
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
+    "mysql": "^2.18.1",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
